apps/base/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &deploymentName radarr-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *deploymentName
  template:
    metadata:
      labels:
        app: *deploymentName
    spec:
      containers:
        - env:
            - name: UMASK
              value: "007"
            - name: TZ
              value: Europe/London
            - name: PUID
              value: "1001"
            - name: PGID
              value: "100"
          image: linuxserver/radarr:latest@sha256:7dfd049e79c00b16fbc29c3f5d96a9e7b9e73a23930b4c5b3c4541d60b366814
          imagePullPolicy: IfNotPresent
          name: radarr
          ports:
            - containerPort: 7878
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config-volume
              subPath: radarr/config
            - mountPath: /anime
              name: media-volume
              subPath: jellyfin/media/anime
            - mountPath: /movies
              name: media-volume
              subPath: jellyfin/media/movies
            - mountPath: /data
              name: media-volume
              subPath: jellyfin/downloads
      hostname: radarr
      volumes:
        - name: config-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: ${NFS_STORAGE_CONFIG_DATA_PATH}
        - name: media-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: /mnt/mopower/swarm-data
