apps/base/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
spec:
  selector:
    app: radarr-deployment
  ports:
  - name: http
    port: 7878
    targetPort: 7878
    protocol: TCP
