apps/base/media/radarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.local.${DOMAIN}`) || Host(`radarr.internal.${DOMAIN}`)
      kind: Rule
      services:
        - name: radarr-service
          port: 7878
  tls:
    certResolver: letsencrypt
